refactor: clean up code formatting and improve comments across multiple files